--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: Continuous Integration
+
 on: [ push, pull_request ]
 
 jobs:
@@ -13,3 +14,19 @@ jobs:
           java-version: '17'
           cache: 'gradle'
       - run: ./gradlew build --no-daemon
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: Unit Test Results
+          path: |
+            build/test-results/**/*.xml
+  event_file:
+    name: Upload event file
+    runs-on: ubuntu-latest
+    steps:
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: event_file
+          path: ${{ github.event_path }}
