--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,32 @@
-name: Continuous Integration
+name: "Continuous Integration"
 
 on: [ push, pull_request ]
 
 jobs:
   build:
-    name: Build
+    name: "Build"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'gradle'
+          distribution: "temurin"
+          java-version: "17"
+          cache: "gradle"
       - run: ./gradlew build --no-daemon
-      - name: Upload Test Results
+      - name: "Upload Test Results"
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: Unit Test Results
+          name: "Unit Test Results"
           path: |
             build/test-results/**/*.xml
   event_file:
-    name: Upload event file
+    name: "Upload event file"
     runs-on: ubuntu-latest
     steps:
-      - name: Upload
+      - name: "Upload"
         uses: actions/upload-artifact@v2
         with:
-          name: event_file
+          name: "event_file"
           path: ${{ github.event_path }}
