--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,39 +8,43 @@ on:
 
 jobs:
   build:
-    name: "Build"
+    name: "Build and test"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - name: "Check out code"
+        uses: actions/checkout@v2
+      - name: "Install Java 17 Temurin"
+        uses: actions/setup-java@v2
         with:
           distribution: "temurin"
           java-version: "17"
           cache: "gradle"
-      - run: ./gradlew build --no-daemon
-      - name: "Upload Test Results"
+      - name: "Execute gradle"
+        run: ./gradlew build --no-daemon
+      - name: "Upload test results"
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: "Unit Test Results"
+          name: "Unit test results"
           path: |
             build/test-results/**/*.xml
 
   coverage:
-    name: "Coverage"
+    name: "JaCoCo coverage"
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      - name: "JaCoCo report"
+      - name: "Generate check run"
         uses: PavanMudigonda/jacoco-reporter@v2.3
         with:
           coverage_results_path: build/reports/jacoco/test/jacocoTestReport.xml
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: "JaCoCo comment"
+      - name: "Generate comment"
+        if: github.event_name == 'pull_request'
         uses: madrapps/jacoco-report@v1.2
         with:
           paths: build/reports/jacoco/test/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
-        if: github.event_name == 'pull_request'
 
   event_file:
     name: "Upload event file"
