--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,14 +25,14 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: "Unit test results"
+          name: "unit_test_results"
           path: |
             build/test-results/**/*.xml
       - name: "Upload coverage report"
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: "jacocoTestReport"
+          name: "jacoco_test_report"
           path: build/reports/jacoco/test/jacocoTestReport.xml
 
   event_file:
