--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,18 +12,28 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.workflow_run.conclusion != 'skipped'
     steps:
-      - name: "Download JaCoCo test report"
-        uses: actions/download-artifact@v2
-        with:
-          name: "jacocoTestReport"
+      - name: "Download and Extract Artifacts"
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        run: |
+          mkdir -p artifacts && cd artifacts
+          
+          artifacts_url=${{ github.event.workflow_run.artifacts_url }}
+          
+          gh api "$artifacts_url" -q '.artifacts[] | [.name, .archive_download_url] | @tsv' | while read artifact
+          do
+            IFS=$'\t' read name url <<< "$artifact"
+            gh api $url > "$name.zip"
+            unzip -d "$name" "$name.zip"
+          done
       - name: "Generate check run"
         uses: PavanMudigonda/jacoco-reporter@v2.3
         with:
-          coverage_results_path: build/reports/jacoco/test/jacocoTestReport.xml
+          coverage_results_path: artifacts/jacoco_test_report/build/reports/jacoco/test/jacocoTestReport.xml
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: "Generate comment"
         if: github.event_name == 'pull_request'
         uses: madrapps/jacoco-report@v1.2
         with:
-          paths: build/reports/jacoco/test/jacocoTestReport.xml
+          paths: artifacts/jacoco_test_report/build/reports/jacoco/test/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
