:construction_worker: Try to configure jacoco-reporter to run successful (#18)

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -31,6 +31,11 @@ jobs:
         with:
           coverage_results_path: artifacts/jacoco_test_report/jacocoTestReport.xml
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          coverage_report_name: Coverage
+          coverage_report_title: JaCoCo
+          skip_check_run: false
+          minimum_coverage: 80
+          fail_below_threshold: false
       - name: "Generate comment"
         if: github.event_name == 'pull_request'
         uses: madrapps/jacoco-report@v1.2
