--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,7 +29,7 @@ jobs:
       - name: "Generate check run"
         uses: PavanMudigonda/jacoco-reporter@v2.3
         with:
-          coverage_results_path: artifacts/jacoco_test_report/jacocoTestReport.xml
+          coverage_results_path: ${{ github.workspace }}/artifacts/jacoco_test_report/jacocoTestReport.xml
           github_token: ${{ secrets.GITHUB_TOKEN }}
           coverage_report_name: Coverage
           coverage_report_title: JaCoCo
@@ -40,5 +40,7 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: madrapps/jacoco-report@v1.2
         with:
-          paths: artifacts/jacoco_test_report/jacocoTestReport.xml
+          paths: ${{ github.workspace }}/artifacts/jacoco_test_report/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 80
+          min-coverage-changed-files: 80
