:construction_worker: connect logstash to elasticsearch by using ssl

--- a/docker/config/logstash/pipelines/main.conf
+++ b/docker/config/logstash/pipelines/main.conf
@@ -11,7 +11,8 @@ filter {
 }
 output {
 	elasticsearch {
-		hosts => "localhost:9200"
+		hosts => "https://localhost:9200"
+		cacert => "/usr/share/logstash/certs/ca.crt"
 		index => "local_development"
 		user => "logstash_internal"
 		password => "${USER_LOGSTASH_INTERNAL_PASSWORD}"
