--- a/docker/config/logstash/pipelines/main.conf
+++ b/docker/config/logstash/pipelines/main.conf
@@ -11,7 +11,7 @@ filter {
 }
 output {
 	elasticsearch {
-		hosts => "https://localhost:9200"
+		hosts => "https://es01:9200"
 		cacert => "/usr/share/logstash/certs/ca/ca.crt"
 		index => "local_development"
 		user => "logstash_internal"
