:construction_worker: logstash_internal is not allowed to access elasticsearch. use elasticsearch's superuser 'elastic' instead.

--- a/docker/config/logstash/pipelines/main.conf
+++ b/docker/config/logstash/pipelines/main.conf
@@ -14,8 +14,8 @@ output {
 		hosts => "https://es01:9200"
 		cacert => "/usr/share/logstash/certs/ca/ca.crt"
 		index => "local_development"
-		user => "logstash_internal"
-		password => "${USER_LOGSTASH_INTERNAL_PASSWORD}"
+		user => "elastic"
+		password => "${USER_ELASTIC_PASSWORD}"
 		retry_on_conflict => 5
 		action => create
 	}
