--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.workflow_run.conclusion != 'skipped'
     steps:
+      - name: "Check out code"
+        uses: actions/checkout@v2
       - name: "Download and Extract Artifacts"
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
@@ -26,11 +28,10 @@ jobs:
             gh api $url > "$name.zip"
             unzip -d "$name" "$name.zip"
           done
-      - name: "Generate comment"
-        if: github.event_name == 'pull_request'
-        uses: madrapps/jacoco-report@v1.2
+      - name: "Upload to codecov"
+        uses: codecov/codecov-action@v2
         with:
-          paths: artifacts/jacoco_test_report/jacocoTestReport.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 80
-          min-coverage-changed-files: 80
+          files: artifacts/jacoco_test_report/jacocoTestReport.xml
+          flags: unittests
+          fail_ci_if_error: true
+          verbose: true
