--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "17"
-          cache: "gradle"
+          # cache: "gradle"
       - name: "Execute gradle"
         run: ./gradlew build --no-daemon
       - name: "Upload test results"
