--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,29 +18,50 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "17"
-          # cache: "gradle"
-      - name: "Execute gradle"
+          cache: "gradle"
+      - name: "Execute gradle build"
         run: ./gradlew build --no-daemon
-      - name: "Upload test results"
+      - name: "Save test results as artifact"
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: "unit_test_results"
-          path: |
-            build/test-results/**/*.xml
-      - name: "Upload coverage report"
+          name: "test-results"
+          path: build/test-results/**/*.xml
+      - name: "Save coverage report as artifact"
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: "jacoco_test_report"
+          name: "coverage-report"
           path: build/reports/jacoco/test/jacocoTestReport.xml
 
-  event_file:
-    name: "Upload event file"
+  test-results:
+    name: "Publish test results"
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      - name: "Upload"
-        uses: actions/upload-artifact@v2
+      - name: "Download test results"
+        uses: actions/download-artifact@v2
         with:
-          name: "event_file"
-          path: ${{ github.event_path }}
+          name: "test-results"
+      - name: "Publish Unit Test Results"
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
+        with:
+          files: ./**/*.xml
+
+  coverage:
+    name: "Coverage"
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: "Download coverage report"
+        uses: actions/download-artifact@v2
+        with:
+          name: "coverage-report"
+      - name: "Upload to Codecov"
+        uses: codecov/codecov-action@v2
+        with:
+          files: jacocoTestReport.xml
+          flags: unittests
+          fail_ci_if_error: true
+          verbose: true
