--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
           files: ./**/*.xml
 
   coverage:
-    name: "Coverage"
+    name: "Publish coverage"
     runs-on: ubuntu-latest
     needs: build
     steps:
