--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,11 +57,9 @@ jobs:
       - name: "Download coverage report"
         uses: actions/download-artifact@v2
         with:
-          name: "coverage-report"
-      - name: "Upload to Codecov"
-        uses: codecov/codecov-action@v2
+          name: "coverage-report"coda
+      - name: "Upload to Codacy"
+        uses: codacy/codacy-coverage-reporter-action@v1
         with:
-          files: jacocoTestReport.xml
-          flags: unittests
-          fail_ci_if_error: true
-          verbose: true
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: jacocoTestReport.xml
