:construction_worker: add keycloak to the local docker setup

--- a/docker/elasticstack/config/logstash/pipelines/main.conf
+++ b/docker/elasticstack/config/logstash/pipelines/main.conf
@@ -15,7 +15,7 @@ output {
 		cacert => "/usr/share/logstash/certs/ca/ca.crt"
 		index => "local_development"
 		user => "elastic"
-		password => "${USER_ELASTIC_PASSWORD}"
+		password => "${ELASTICSTACK_USER_ELASTIC_PASSWORD}"
 		retry_on_conflict => 5
 		action => create
 	}
