:construction_worker: summarise the start and stop commands of multiple docker-environments into one

--- a/docker/.env.local
+++ b/docker/.env.local
@@ -2,10 +2,11 @@ ELASTICSTACK_VERSION="8.0.0"
 ELASTICSTACK_USER_ELASTIC_PASSWORD="huml1b_el4st1c"
 ELASTICKSTACK_USER_KIBANA_SYSTEM_PASSWORD="huml1b_k1b4n4"
 # Increase or decrease based on the available host memory (in bytes)
-ELASTICSTACK_MEM_LIMIT="1073741824"
+DOCKER_MEM_LIMIT_ELASTICSTACK="1073741824"
 
 KEYCLOAK_DATABASE="keycloak"
 KEYCLOAK_DATABASE_USERNAME="keycloak-db-admin"
 KEYCLOAK_DATABASE_PASSWORD="huml1b_k3ycl04k_d4t4b4s3_4dm1n"
 KEYCLOAK_ADMIN_USERNAME="keycloak-admin"
 KEYCLOAK_ADMIN_PASSWORD="huml1b_k3ycl04k"
+DOCKER_MEM_LIMIT_KEYCLOAK="1073741824"
