--- a/docker/elasticstack/docker-compose.yml
+++ b/docker/elasticstack/docker-compose.yml
@@ -62,7 +62,7 @@ services:
     environment:
       ES_JAVA_OPTS: -Xmx256m -Xms256m
       ELASTIC_PASSWORD: ${ELASTICSTACK_USER_ELASTIC_PASSWORD}
-    mem_limit: ${ELASTICSTACK_MEM_LIMIT}
+    mem_limit: ${DOCKER_MEM_LIMIT_ELASTICSTACK}
     ulimits:
       memlock:
         soft: -1
@@ -94,7 +94,7 @@ services:
       - "../logs/:/var/log/local_development:delegated"
     ports:
       - 5044:5044
-    mem_limit: ${ELASTICSTACK_MEM_LIMIT}
+    mem_limit: ${DOCKER_MEM_LIMIT_ELASTICSTACK}
 
   kibana:
     profiles: ["all"]
@@ -112,7 +112,7 @@ services:
       - "./config/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml"
     ports:
       - 5601:5601
-    mem_limit: ${ELASTICSTACK_MEM_LIMIT}
+    mem_limit: ${DOCKER_MEM_LIMIT_ELASTICSTACK}
     healthcheck:
       test:
         [
