--- a/docker/keycloak/docker-compose.yml
+++ b/docker/keycloak/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       POSTGRES_DB: ${KEYCLOAK_DATABASE}
       POSTGRES_USER: ${KEYCLOAK_DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${KEYCLOAK_DATABASE_PASSWORD}
+    mem_limit: ${DOCKER_MEM_LIMIT_KEYCLOAK}
   keycloak:
     image: quay.io/keycloak/keycloak:legacy
     environment:
@@ -18,6 +19,7 @@ services:
       DB_SCHEMA: public
       KEYCLOAK_USER: ${KEYCLOAK_ADMIN_USERNAME}
       KEYCLOAK_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
+    mem_limit: ${DOCKER_MEM_LIMIT_KEYCLOAK}
     ports:
       - 8080:8080
     depends_on:
