:construction_worker: fixes after review (#2 and #3)

--- a/docker/.env.local
+++ b/docker/.env.local
@@ -2,7 +2,7 @@ ELASTICSTACK_VERSION="8.0.0"
 ELASTICSTACK_USER_ELASTIC_PASSWORD="huml1b_el4st1c"
 ELASTICSTACK_USER_KIBANA_SYSTEM_PASSWORD="huml1b_k1b4n4"
 # Increase or decrease based on the available host memory (in bytes)
-DOCKER_MEM_LIMIT_ELASTICSTACK="1073741824"
+DOCKER_MEM_LIMIT_ELASTICSTACK="1073741824" #1GB
 
 KEYCLOAK_DATABASE="keycloak"
 KEYCLOAK_DATABASE_USERNAME="keycloak-db-admin"
