--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,3 +2,10 @@
 application:
   title: HumLib - The Human Library in Computer Science
   version: 0.0.1
+
+elasticsearch:
+  scheme: https
+  host: localhost
+  port: 9200
+  username: elastic
+  password: elastic
