:sparkles: Leave actuator/health endpoints open but secure all others by method security (#5)

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -7,6 +7,8 @@ spring:
           jwk-set-uri: http://localhost:8180/auth/realms/humlib/protocol/openid-connect/certs
 logging:
   level:
+    com:
+      humlib: DEBUG
     org:
       springframework:
-        security: DEBUG
+        security: TRACE
