:sparkles: fixes after review: rename HumanProfile to Human, delete unused User and its test, refactor application.yml and clean up the POM  (#5)

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -12,3 +12,10 @@ logging:
     org:
       springframework:
         security: TRACE
+
+elasticsearch:
+  scheme: https
+  host: localhost
+  port: 9200
+  username: elastic
+  password: elastic
